@startuml

title __LAB7V2's Class Diagram__\n

  namespace a {
    namespace om.example.lab7v2 {
      class com.example.lab7v2.Controller {
          + friendLabel : TextField
          + listView : ListView
          + name : Label
          + nameField : TextField
          + pictureLabel : TextField
          + pictureView : ImageView
          + quote : Label
          + quoteLabel : TextField
          + status : Label
          + statusChangeLabel : TextField
          + statusLabel : Label
          + unfriendLabel : TextField
          ~ friendList : ObservableList<String>
          {static} - friendNames : ArrayList<String>
          {static} - list : HashMap<String, ArrayList<ProfileData>>
          + addVertex()
          + handleAdd()
          + handleAddFriend()
          + handleDelete()
          + handleLookup()
          + handlePicture()
          + handleQuote()
          + handleStatus()
          + handleUnfriend()
          - changeProfileDisplay()
          - createCircle()
          - createLabel()
          - createLine()
          - displayGraph()
          - findFriendIndex()
          - findIndex()
          - initialize()
          - randomNumber()
      }
    }
  }
  

  namespace a {
    namespace om.example.lab7v2 {
      class com.example.lab7v2.Main {
          {static} + main()
          + start()
      }
    }
  }
  

  namespace a {
    namespace om.example.lab7v2 {
      class com.example.lab7v2.ProfileData {
          - friends : ArrayList<String>
          - imageLocation : String
          - name : String
          - quote : String
          - status : String
          + ProfileData()
          + addFriend()
          + getFriend()
          + getImage()
          + getName()
          + getQuote()
          + getStatus()
          + removeFriend()
          + setName()
          + setPicture()
          + setQuote()
          + setStatus()
          + toString()
      }
    }
  }
  

  com.example.lab7v2.Controller o-- com.example.lab7v2.ProfileData : profileData
  com.example.lab7v2.Main -up-|> javafx.application.Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
